[package]
name = "swipl-fli"
version = "0.3.4"
authors = ["Matthijs van Otterdijk <matthijs@terminusdb.com>"]
edition = "2018"
links = "swipl"
license = "Apache-2.0/MIT"
description = "Low-level bindings to the SWI-Prolog Foreign Language Interface"
repository = "https://github.com/terminusdb-labs/swipl-rs/"
documentation = "https://terminusdb-labs.github.io/swipl-rs/swipl_fli/"

[dependencies]
[build-dependencies]
bindgen = "0.63.0"
swipl-info = {path = "../swipl-info", version = "0.3.2"}
