[package]
name = "swipl-info"
version = "0.1.0"
authors = ["Matthijs van Otterdijk <matthijs@terminusdb.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
description = "Helper crate for retrieving information about the installed version of SWI-Prolog"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
