[package]
name = "swipl-info"
version = "0.3.0"
authors = ["Matthijs van Otterdijk <matthijs@terminusdb.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
description = "Helper crate for retrieving information about the installed version of SWI-Prolog"
repository = "https://github.com/terminusdb-labs/swipl-rs/"
documentation = "https://terminusdb-labs.github.io/swipl-rs/swipl_info/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"