[package]
name = "swipl-macros"
version = "0.1.0"
authors = ["Matthijs van Otterdijk <matthijs@terminusdb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = {version="1.0", features=["parsing","full"]}
proc-macro2 = "1.0"
proc-macro-crate = "0.1"