[package]
name = "swipl"
version = "0.1.0"
authors = ["Matthijs van Otterdijk <matthijs@terminusdb.com>"]
edition = "2018"
license = "Apache-2.0/MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swipl-sys = {path = "../swipl-sys"}
lazy_static = "1.4.0"