[package]
name = "swipl"
version = "0.3.3"
authors = ["Matthijs van Otterdijk <matthijs@terminusdb.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
description = "A high-level library for building SWI-Prolog extensions and embedding SWI-Prolog in rust applications"
repository = "https://github.com/terminusdb-labs/swipl-rs/"
documentation = "https://terminusdb-labs.github.io/swipl-rs/swipl/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swipl-fli = {path = "../swipl-fli", version="0.3"}
swipl-macros = {path = "../swipl-macros", version="0.3.2"}
lazy_static = "1.4.0"
thiserror = "1.0"